--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 <!-- Google Analytics Code Goes Here-->
 </head>
 
-<body>
+<body oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;">
 	<div id="cspio-page">
 		<div id="cspio-content">
 
@@ -363,7 +363,7 @@
  
  
 }
-#footer p{
+#footer p{ 
 	font-size: 14px;
 }
 .input-group-btn .btn{
