--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 <!-- Google Analytics Code Goes Here-->
 </head>
 
-<body oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;">
+<body>
 	<div id="cspio-page">
 		<div id="cspio-content">
 
