--- a/index1.html
+++ b/index1.html
@@ -164,7 +164,7 @@ color: #ffffff;}
 </style>
 </head>
 
-<body>
+    <body oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;">
 
 <div class="container">
     <div class="row">
