--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <meta name="twitter:title" content="Piyush Verma | UI/UX Designer &amp; Front End Developer" />
     <meta name="twitter:site" content="@PrankyPiyush" />
     <meta name="twitter:creator" content="@PrankyPiyush" />
+    <meta name="p:domain_verify" content="882140d87f7cf60506171efb6afc49c3"/>
     <!-- Font Awesome CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
     <!-- Bootstrap and default Style -->
