--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <link rel="shortcut icon" href="http://d1ujqdpfgkvqfi.cloudfront.net/favicon-generator/htdocs/favicons/2015-02-03/743cbbe68d0e9a3c17d829f51b016827.ico">
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Piyush Verma | UI/UX Designer &amp; Front End Developer" />
-    <meta name="twitter:site" content="@PrankyPiyush" />
-    <meta name="twitter:creator" content="@PrankyPiyush" />
+    <meta name="twitter:site" content="@thepiyushverma" />
+    <meta name="twitter:creator" content="@thepiyushverma" />
     <meta name="p:domain_verify" content="882140d87f7cf60506171efb6afc49c3"/>
     <!-- Font Awesome CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -204,7 +204,7 @@ color: #ffffff;}
 <span id="cspio-privacy-policy-txt">We promise to never spam you.</span>
 <div id="cspio-socialprofiles">
     <a href="https://www.facebook.com/ThePiyushVerma" target="_blank"><i class="fa fa-facebook-official fa-2x"></i></a>
-    <a href="https://twitter.com/prankypiyush" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
+    <a href="https://twitter.com/thepiyushverma" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
     <a href="https://www.instagram.com/thepiyushverma/" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
     <a href="mailto:hello@thepiyushverma.com" target="_blank"><i class="fa fa-envelope fa-2x"></i></a>
 </div>
