--- a/index.html
+++ b/index.html
@@ -203,7 +203,9 @@ color: #ffffff;}
 </form>
 <span id="cspio-privacy-policy-txt">We promise to never spam you.</span>
 <div id="cspio-socialprofiles">
-    <a href="https://www.facebook.com/ThePiyushVerma" target="_blank"><i class="fa fa-facebook-official fa-2x"></i></a>
+    <a class="intent"   
+    href="http://facebook.com/thepiyushverma"   
+    data-scheme="fb://profile/thepiyushverma" target="_blank"><i class="fa fa-facebook-official fa-2x"></i></a>
     <a href="https://twitter.com/thepiyushverma" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
     <a href="https://www.instagram.com/thepiyushverma/" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
     <a href="mailto:hello@thepiyushverma.com" target="_blank"><i class="fa fa-envelope fa-2x"></i></a>
