--- a/index.html
+++ b/index.html
@@ -272,7 +272,6 @@
                 </div>
                 <div class="col-md-offset-1 col-md-10 col-sm-12">
                     <!-- CONTACT FORM HERE -->
-
                     <form id="contact-form" role="form">
                         <!-- IF MAIL SENT SUCCESSFULLY -->
                         <h6 class="text-success">Your message has been sent successfully. </h6>
@@ -293,10 +292,7 @@
                         <div class="wow fadeInUp col-md-offset-9 col-md-3 col-sm-offset-8 col-sm-4 animated">
                             <button type="submit" onclick="sendMail(); return false" class="form-control" id="cf-submit" name="submit">Send Message</button>
                         </div>
-
                     </form>
-
-
                 </div>
             </div>
         </div>
@@ -329,7 +325,7 @@
                     <ul class="social-icon">
                         <li class="wow fadeInUp animated"><a href="mailto:hello@thepiyushverma.com" class="fa fa-envelope-o"></a></li>
                         <li class="wow fadeInUp animated"><a href="https://in.linkedin.com/in/thepiyushverma" target="_blank" class="fa fa-linkedin"></a></li>
-                        <li class="wow fadeInUp animated"><a href="instagram://user?username={thepiyushverma}/" target="_blank" class="fa fa-instagram"></a></li>
+                        <li class="wow fadeInUp animated"><a href="https://www.instagram.com/thepiyushverma" target="_blank" class="fa fa-instagram"></a></li>
                         <li class="wow fadeInUp animated"><a href="https://www.facebook.com/ThePiyushVerma" target="_blank" class="fa fa-facebook"></a></li>
                         <li class="wow fadeInUp animated"><a href="https://twitter.com/ThePiyushVerma" target="_blank" class="fa fa-twitter"></a></li>
                     </ul>
