--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
     <meta name="theme-color" content="#000000">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
-     <meta property="og:image" content="http://thepiyushverma.com/assets/images/favicons/safari-pinned-tab.svg">
-
+    <meta property="og:image" content="http://thepiyushverma.com/assets/images/favicons/open-graph-logo.jpg">
+    <meta property='og:image:url' content="http://thepiyushverma.com/assets/images/favicons/open-graph-logo.jpg"/>
+    <meta property='og:image:width' content='400' />
+    <meta property='og:image:height' content='400' />
+    <meta property='og:image:type' content='image/jpeg' />
     <meta property="og:url" content="http://thepiyushverma.com/" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Piyush Verma | UI/UX Designer &amp; Front End Developer" />
