Change in author

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="UI/UX Designer and Front End Developer with a passion for designing beautiful and functional user experiences.">
     <meta name="keywords" content="web design, design, website, development, psd to HTML, front end development, HTML, CSS, web designer, web developer"
     />
-    <meta name="Author" content="Piyush Verma" />
+    <meta name="Author" content="Piyush Verma | hello@thepiyushverma.com | thepiyushverma.com" />
     <meta name="theme-color" content="#000000">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
